--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -20,5 +20,9 @@ jobs:
 
       - name: Install dependencies
         run: pip install .
+
+      - name: Install pytest
+        run: pip install pytest
+        
       - name: Run tests
         run: pytest 
