cleaned up paper_plots and minor fixes

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,5 +7,7 @@ author = ngr-francesco
 install_requires= 
     numpy 
     matplotlib
+    ipykernel
+    bayesian-optimization
 packages = find:
 exclude = logo
